--- a/wp-content/themes/pure-line/languages/pt_BR.po
+++ b/wp-content/themes/pure-line/languages/pt_BR.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: Pure Line\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-02-08 21:14+0100\n"
-"PO-Revision-Date: 2011-04-26 09:32-0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2013-03-08 19:29-0300\n"
+"Last-Translator: Diego Rabatone Oliveira <diraol@diraol.eng.br>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
